--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
 <head>
 
 <body>
-    <applet code="" archive="">
+    <h2>LP Solver</h2>
+    <applet code="lpsolve.class" archive="lpsolve.jar" >
+
+    <h3>Baihan Lin</h3>
+    <h4>DoerLBH@gmail.com</h4>
+    <h4>University of Washington, Seattle</h4>
+
+
 </body>
 
 </html>
