--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
 <body>
     <h2>LP Solver</h2>
-    <applet code="lpsolve.class" archive="lpsolve.jar" >
-
+  <applet code="/lpsolve/src/lpsolve/lpsolve.class" width="400" height="100" >
     <h3>Baihan Lin</h3>
     <h4>DoerLBH@gmail.com</h4>
     <h4>University of Washington, Seattle</h4>
