--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <h2>LP Solver</h2>
-  <applet code="lpsolve.class" width="400" height="100" >
+  <applet code=lpsolve.lpsolve.class width="200" height="200" >
     <h3>Baihan Lin</h3>
     <h4>DoerLBH@gmail.com</h4>
     <h4>University of Washington, Seattle</h4>
