--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
 <body>
     <h2>LP Solver</h2>
-  <applet code=lpsolve.lpsolve.class width="200" height="200" >
+  	<applet code="lpsolve.class" archive="lpsolveGUI.jar" >
+
     <h3>Baihan Lin</h3>
     <h4>DoerLBH@gmail.com</h4>
     <h4>University of Washington, Seattle</h4>
