--- a/index.html
+++ b/index.html
@@ -3,15 +3,26 @@
 
 <head>
     <title>LP Solver by Baihan Lin</title>
+    <style>
+    h2 {color: blue;}
+  </style>
 <head>
 
 <body>
     <h2>LP Solver</h2>
-  	<applet code="lpsolve.class" archive="lpsolveGUI.jar" >
+
+<form action="action_page.php">
+  <textarea name="message" rows="20" cols="80">Please put in your LP input. :)</textarea>
+  <br>
+  <input type="submit">
+</form>
+
 
     <h3>Baihan Lin</h3>
     <h4>DoerLBH@gmail.com</h4>
     <h4>University of Washington, Seattle</h4>
+<button type="button" onclick="alert('You are welcome my friend!')">Thank Me!</button>
+
 
 
 </body>
