--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <h2>LP Solver</h2>
 
-<form action="action_page.php">
-  <textarea name="message" rows="20" cols="80">Please put in your LP input. :)</textarea>
+<form action="test.php">
+  <textarea name="input" rows="20" cols="80">Please put in your LP input. :)</textarea>
   <br>
   <input type="submit">
 </form>
